--- a/funk.html
+++ b/funk.html
@@ -10,15 +10,15 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "require.js", "funk.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "funk.css"], "outOfDate":[]};
 </script>
   
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>FUNK</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4200300649"/>
-  <link rel="stylesheet" type="text/css" href="css/funk.css?crc=10157895" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3758432377"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=296932729"/>
+  <link rel="stylesheet" type="text/css" href="css/funk.css?crc=307034865" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_funk.css?crc=293456146"/>
@@ -130,14 +130,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="SlideShowWidget clearfix colelem" id="slideshowu24931"><!-- none box -->
        <div class="popup_anchor" id="u24934popup">
         <div class="SlideShowContentPanel clearfix" id="u24934"><!-- stack box -->
-         <!-- m_editable region-id="editable-static-tag-U25097-BP_infinity" template="funk.html" data-type="image" data-ice-options="srcAttr=data-src" -->
-         <div class="SSSlide clip_frame clearfix grpelem" id="u25097" data-muse-uid="U25097" data-muse-type="img_frame"><!-- image -->
-          <img class="ImageInclude position_content" id="u25097_img" data-src="images/funk_package0.jpg?crc=4159842385" src="images/blank.gif?crc=4208392903" alt="" data-width="560" data-height="373" data-muse-src="images/funk_package0.jpg?crc=4159842385"/>
+         <!-- m_editable region-id="editable-static-tag-U25401-BP_infinity" template="funk.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+         <div class="SSSlide clip_frame grpelem" id="u25401" data-muse-uid="U25401" data-muse-type="img_frame"><!-- image -->
+          <img class="block ImageInclude" id="u25401_img" data-src="images/funk_cover-crop-u25401.jpg?crc=3869375992" src="images/blank.gif?crc=4208392903" alt="" data-width="560" data-height="309" data-muse-src="images/funk_cover-crop-u25401.jpg?crc=3869375992"/>
          </div>
          <!-- /m_editable -->
-         <!-- m_editable region-id="editable-static-tag-U25374-BP_infinity" template="funk.html" data-type="image" data-ice-options="srcAttr=data-src" -->
-         <div class="SSSlide invi clip_frame clearfix grpelem" id="u25374" data-muse-uid="U25374" data-muse-type="img_frame"><!-- image -->
-          <img class="ImageInclude position_content" id="u25374_img" data-src="images/funk_package.jpg?crc=325744292" src="images/blank.gif?crc=4208392903" alt="" data-width="560" data-height="373" data-muse-src="images/funk_package.jpg?crc=325744292"/>
+         <!-- m_editable region-id="editable-static-tag-U25428-BP_infinity" template="funk.html" data-type="image" data-ice-options="srcAttr=data-src" -->
+         <div class="SSSlide invi clip_frame grpelem" id="u25428" data-muse-uid="U25428" data-muse-type="img_frame"><!-- image -->
+          <img class="block ImageInclude" id="u25428_img" data-src="images/funk_backcover-crop-u25428.jpg?crc=449364555" src="images/blank.gif?crc=4208392903" alt="" data-width="560" data-height="309" data-muse-src="images/funk_backcover-crop-u25428.jpg?crc=449364555"/>
          </div>
          <!-- /m_editable -->
          <!-- m_editable region-id="editable-static-tag-U25117-BP_infinity" template="funk.html" data-type="image" data-ice-options="srcAttr=data-src" -->
