--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Home</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3758432377"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=296932729"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=117645944" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=243018780" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=334070089"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?crc=3782869780"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -169,7 +169,10 @@ transition:300ms;
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u22731" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U22731" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u22731_img" src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374" alt="" width="427" height="240" data-muse-src="images/betweenspaces_printed_editedsm-4.jpg?crc=433621374"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24866-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame clearfix grpelem" id="u24866" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U24866" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u24866_img" src="images/funkthmb.png?crc=3896537575" alt="" width="400" height="243" data-muse-src="images/funkthmb.png?crc=3896537575"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u24866" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U24866" data-muse-type="img_frame"><!-- image --><img class="block" id="u24866_img" src="images/funk_cover-crop-u24866.jpg?crc=3771023534" alt="" width="400" height="241" data-muse-src="images/funk_cover-crop-u24866.jpg?crc=3771023534"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U25449-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u25449" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U25449" data-muse-type="img_frame"><!-- image --><img class="block" id="u25449_img" src="images/tip_cover-crop-u25449.jpg?crc=4082276319" alt="" width="400" height="241" data-muse-src="images/tip_cover-crop-u25449.jpg?crc=4082276319"/></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U22690-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
      <a class="nonblock nontext clip_frame clearfix grpelem" id="u22690" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U22690" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u22690_img" src="images/betweenspaces_attamatic-2.jpg?crc=4215220975" alt="" width="400" height="711" data-muse-src="images/betweenspaces_attamatic-2.jpg?crc=4215220975"/></a>
@@ -253,6 +256,9 @@ transition:300ms;
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24873-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u24873-6" href="funk.html" data-href="page:U24624" data-muse-uid="U24873" data-muse-type="txt_frame"><!-- content --><p id="u24873-2">FUNK</p><p id="u24873-4">Art direction, Illustration, Graphic Design</p></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U25456-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u25456-6" href="funk.html" data-href="page:U24624" data-muse-uid="U25456" data-muse-type="txt_frame"><!-- content --><p id="u25456-2">TRIBUS</p><p id="u25456-4">Art direction, Illustration, Graphic Design</p></a>
      <!-- /m_editable -->
      <a class="anchor_item grpelem" id="project_home"></a>
      <div class="clearfix grpelem" id="u22755"><!-- group -->
