--- a/work.html
+++ b/work.html
@@ -10,18 +10,18 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "openpage_thesis.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "work.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
-  <title>OpenPage_thesis</title>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
+  <title>work</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3758432377"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=296932729"/>
-  <link rel="stylesheet" type="text/css" href="css/openpage_thesis.css?crc=108231965" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/work.css?crc=180409576" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_openpage_thesis.css?crc=3987240116"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_work.css?crc=3987240116"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -91,7 +91,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="clearfix colelem" id="u15246"><!-- group -->
     <div class="clearfix grpelem" id="pu15219"><!-- group -->
      <div class="clearfix grpelem" id="u15219"><!-- column -->
-      <!-- m_editable region-id="editable-static-tag-U15203-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+      <!-- m_editable region-id="editable-static-tag-U15203-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="clearfix colelem" id="u15203-6" data-muse-uid="U15203" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
        <p><span class="BoldMenuLink" id="u15203">Hello, I'm Nitcha or Fame.</span></p>
        <p><span class="BoldMenuLink" id="u15203-3">Welcome to my website.</span></p>
@@ -99,7 +99,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <!-- /m_editable -->
       <div class="clearfix colelem" id="pu14813"><!-- group -->
        <div class="clearfix grpelem" id="u14813"><!-- column -->
-        <!-- m_editable region-id="editable-static-tag-U14814-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <!-- m_editable region-id="editable-static-tag-U14814-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="clearfix colelem" id="u14814-9" data-muse-uid="U14814" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
          <p id="u14814-2"><span class="BoldMenuLink" id="u14814">I'm currently exploring, researching the speculative human-machine interaction by creating a series of wearable devices</span></p>
          <p id="u14814-3">&nbsp;</p>
@@ -107,7 +107,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
          <p id="u14814-7">2015 - Ongoing</p>
         </div>
         <!-- /m_editable -->
-        <!-- m_editable region-id="editable-static-tag-U14815-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+        <!-- m_editable region-id="editable-static-tag-U14815-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="clearfix colelem" id="u14815-11" data-muse-uid="U14815" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
          <p id="u14815-3"><span id="u14815">Objects in the ser</span><span id="u14815-2">ies</span></p>
          <p id="u14815-5"><span id="u14815-4">-</span></p>
@@ -116,10 +116,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
         <!-- /m_editable -->
        </div>
-       <!-- m_editable region-id="editable-static-tag-U15201-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+       <!-- m_editable region-id="editable-static-tag-U15201-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
        <a class="nonblock nontext clearfix grpelem" id="u15201-4" href="keybod.html" data-href="page:U11454" data-muse-uid="U15201" data-muse-type="txt_frame"><!-- content --><p id="u15201-2"><span class="Character-Style" id="u15201">Key Bod</span></p></a>
        <!-- /m_editable -->
-       <!-- m_editable region-id="editable-static-tag-U15200-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+       <!-- m_editable region-id="editable-static-tag-U15200-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
        <a class="nonblock nontext clearfix grpelem" id="u15200-4" href="attamatic.html" data-href="page:U15059" data-muse-uid="U15200" data-muse-type="txt_frame"><!-- content --><p id="u15200-2"><span class="Character-Style" id="u15200">'Body as an Interface Series'</span></p></a>
        <!-- /m_editable -->
       </div>
@@ -134,13 +134,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
     <div class="clearfix grpelem" id="pu15218"><!-- column -->
      <div class="clearfix colelem" id="u15218"><!-- group -->
-      <!-- m_editable region-id="editable-static-tag-U15208-BP_infinity" template="openpage_thesis.html" data-type="image" -->
+      <!-- m_editable region-id="editable-static-tag-U15208-BP_infinity" template="work.html" data-type="image" -->
       <div class="clip_frame clearfix grpelem" id="u15208" data-muse-uid="U15208" data-muse-type="img_frame"><!-- image -->
        <img class="position_content" id="u15208_img" src="images/2aesthetic_sewing.jpg?crc=209201458" alt="" width="335" height="335" data-muse-src="images/2aesthetic_sewing.jpg?crc=209201458"/>
       </div>
       <!-- /m_editable -->
      </div>
-     <!-- m_editable region-id="editable-static-tag-U15220-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <!-- m_editable region-id="editable-static-tag-U15220-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix colelem" id="u15220-8" data-muse-uid="U15220" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
       <p><span id="u15220">A thesis for the Master of Fine Arts</span></p>
       <p><span id="u15220-3">in Department of Design and Technology at</span></p>
@@ -150,12 +150,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="clearfix colelem" id="pu22739"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U22739-BP_infinity" template="openpage_thesis.html" data-type="image" -->
+    <!-- m_editable region-id="editable-static-tag-U22739-BP_infinity" template="work.html" data-type="image" -->
     <div class="clip_frame clearfix grpelem" id="u22739" data-muse-uid="U22739" data-muse-type="img_frame"><!-- image -->
      <img class="position_content" id="u22739_img" src="images/2016_sxswsxstyle-71400x266.jpg?crc=4134971395" alt="" width="400" height="266" data-muse-src="images/2016_sxswsxstyle-71400x266.jpg?crc=4134971395"/>
     </div>
     <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U22741-BP_infinity" template="openpage_thesis.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <!-- m_editable region-id="editable-static-tag-U22741-BP_infinity" template="work.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext rgba-background clearfix grpelem" id="u22741-6" href="keybod.html" data-href="page:U11454" data-muse-uid="U22741" data-muse-type="txt_frame"><!-- content --><p id="u22741-2">Keybod</p><p id="u22741-4">Wearable Technology, Physical Computing</p></a>
     <!-- /m_editable -->
    </div>
