--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ transition:300ms;
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u24873-6" href="funk.html" data-href="page:U24624" data-muse-uid="U24873" data-muse-type="txt_frame"><!-- content --><p id="u24873-2">FUNK</p><p id="u24873-4">Art direction, Illustration, Graphic Design</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U25456-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u25456-6" href="funk.html" data-href="page:U24624" data-muse-uid="U25456" data-muse-type="txt_frame"><!-- content --><p id="u25456-2">TRIBUS</p><p id="u25456-4">Art direction, Illustration, Graphic Design</p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u25456-6" href="tribus.html" data-href="page:U25797" data-muse-uid="U25456" data-muse-type="txt_frame"><!-- content --><p id="u25456-2">TRIBUS</p><p id="u25456-4">Art direction, Illustration, Graphic Design</p></a>
      <!-- /m_editable -->
      <a class="anchor_item grpelem" id="project_home"></a>
      <div class="clearfix grpelem" id="u22755"><!-- group -->
