--- a/anyways.html
+++ b/anyways.html
@@ -164,7 +164,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SlideShowCaptionPanel clearfix" id="u27392"><!-- stack box -->
         <!-- m_editable region-id="editable-static-tag-U28084-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption clearfix grpelem" id="u28084-4" data-muse-uid="U28084" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 14</p>
+         <p>Website– Drag-able Main Page</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28153-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
