--- a/comingsoon.html
+++ b/comingsoon.html
@@ -10,14 +10,14 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "comingsoon.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jquery.watch.js", "comingsoon.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>comingsoon</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4219841521"/>
-  <link rel="stylesheet" type="text/css" href="css/comingsoon.css?crc=409480224" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
+  <link rel="stylesheet" type="text/css" href="css/comingsoon.css?crc=4244668" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_comingsoon.css?crc=315928287"/>
@@ -118,12 +118,12 @@ transition:100ms;
    <div class="verticalspacer" data-offset-top="1265" data-content-above-spacer="1300" data-content-below-spacer="37"></div>
   </div>
   <div class="preload_images">
-   <img class="preload" src="images/new1mail-u7586-r-fr.png?crc=4051469361" alt=""/>
+   <img class="preload" src="images/new1mail-u11932-r-fr.png?crc=4051469361" alt=""/>
    <img class="preload" src="images/wnew2fb-u11934-r-fr.png?crc=3851663539" alt=""/>
-   <img class="preload" src="images/new3insta-u7590-r-fr.png?crc=203242076" alt=""/>
-   <img class="preload" src="images/new4vimeo-u7592-r-fr.png?crc=527731802" alt=""/>
-   <img class="preload" src="images/new5pin-u7594-r-fr.png?crc=4053791885" alt=""/>
-   <img class="preload" src="images/new6twitter-u7596-r-fr.png?crc=4116158665" alt=""/>
+   <img class="preload" src="images/new3insta-u11935-r-fr.png?crc=203242076" alt=""/>
+   <img class="preload" src="images/new4vimeo-u11937-r-fr.png?crc=527731802" alt=""/>
+   <img class="preload" src="images/new5pin-u11939-r-fr.png?crc=4053791885" alt=""/>
+   <img class="preload" src="images/new6twitter-u11941-r-fr.png?crc=4116158665" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
