--- a/labs.html
+++ b/labs.html
@@ -17,18 +17,18 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Labs</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=105695739"/>
-  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4019342015" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=344979210"/>
+  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4195126751" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_labs.css?crc=4108983610"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_labs.css?crc=3907126507"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
  </head>
@@ -74,11 +74,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u11500-8" href="illustration.html" data-href="page:U11468" data-muse-uid="U11500" data-muse-type="txt_frame"><!-- content --><p id="u11500">&nbsp;</p><p id="u11500-2">&nbsp;</p><p id="u11500-4">Draw Dream</p><p id="u11500-6">Illustrations</p></a>
      <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U15517-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u15517-4" data-muse-uid="U15517" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© 2009 ~ 2016 Nitcha Tothong – All rights reserved.</p>
-    </div>
-    <!-- /m_editable -->
     <div class="clearfix colelem" id="pu26633-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u26633-4" href="mailto:nitcha.fame@gmail.com"><!-- content --><p id="u26633-2"><span class="Character-Style" id="u26633">NITCHA (dot) FAME (at) GMAIL (dot) COM</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u26639-4" href="https://www.facebook.com/nitchafame"><!-- content --><p id="u26639-2"><span class="Character-Style" id="u26639">FB</span></p></a>
