--- a/lick-it.html
+++ b/lick-it.html
@@ -18,7 +18,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=344979210"/>
-  <link rel="stylesheet" type="text/css" href="css/lick-it.css?crc=437773970" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/lick-it.css?crc=114576698" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_lick-it.css?crc=243032692"/>
@@ -107,8 +107,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U13581-BP_infinity" template="lick-it.html" data-type="image" data-ice-options="srcAttr=data-src" -->
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u13581" data-muse-uid="U13581" data-muse-type="img_frame"><!-- image -->
-        <img class="ImageInclude position_content" id="u13581_img" data-src="images/newline_babycastles-40.jpg?crc=121236328" src="images/blank.gif?crc=4208392903" alt="" data-width="800" data-height="554" data-muse-src="images/newline_babycastles-40.jpg?crc=121236328"/>
+       <div class="SSSlide invi clip_frame grpelem" id="u13581" data-muse-uid="U13581" data-muse-type="img_frame"><!-- image -->
+        <img class="block ImageInclude" id="u13581_img" data-src="images/newline_babycastles-40.jpg?crc=121236328" src="images/blank.gif?crc=4208392903" alt="" data-width="800" data-height="534" data-muse-src="images/newline_babycastles-40.jpg?crc=121236328"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U13545-BP_infinity" template="lick-it.html" data-type="image" data-ice-options="srcAttr=data-src" -->
