--- a/reel.html
+++ b/reel.html
@@ -18,17 +18,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=344979210"/>
-  <link rel="stylesheet" type="text/css" href="css/reel.css?crc=4227016891" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_reel.css?crc=245201934"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/reel.css?crc=419917071" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4,n3:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
  </head>
@@ -52,34 +48,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="colelem" id="u2780"><!-- custom html -->
      <iframe src="//player.vimeo.com/video/82764010" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
-    <div class="clearfix colelem" id="pu7775"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U7775-BP_infinity" template="reel.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u7775" href="mailto:nitcha.fame@gmail.com" data-muse-uid="U7775" data-muse-type="img_frame"><!-- image --><img class="block" id="u7775_img" src="images/new1mail.png?crc=4148908067" alt="" width="21" height="17" data-muse-src="images/new1mail.png?crc=4148908067"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7777-BP_infinity" template="reel.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext grpelem" id="u7777" href="https://www.facebook.com/famefamous" data-muse-uid="U7777"><!-- content --></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7779-BP_infinity" template="reel.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u7779" href="http://instagram.com/famenitcha" data-muse-uid="U7779" data-muse-type="img_frame"><!-- image --><img class="block" id="u7779_img" src="images/new3insta.png?crc=3954085402" alt="" width="16" height="16" data-muse-src="images/new3insta.png?crc=3954085402"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7781-BP_infinity" template="reel.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u7781" href="https://vimeo.com/famefamous" data-muse-uid="U7781" data-muse-type="img_frame"><!-- image --><img class="block" id="u7781_img" src="images/new4vimeo.png?crc=4070217899" alt="" width="15" height="13" data-muse-src="images/new4vimeo.png?crc=4070217899"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7783-BP_infinity" template="reel.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u7783" href="http://www.pinterest.com/famefamous/" data-muse-uid="U7783" data-muse-type="img_frame"><!-- image --><img class="block" id="u7783_img" src="images/new5pin.png?crc=470622459" alt="" width="17" height="17" data-muse-src="images/new5pin.png?crc=470622459"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7785-BP_infinity" template="reel.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u7785" href="https://twitter.com/hellofamefamous" data-muse-uid="U7785" data-muse-type="img_frame"><!-- image --><img class="block" id="u7785_img" src="images/new6twitter.png?crc=4020293093" alt="" width="18" height="15" data-muse-src="images/new6twitter.png?crc=4020293093"/></a>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U7879-BP_infinity" template="reel.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext clip_frame grpelem" id="u7879" href="https://github.com/Nitchafame" data-muse-uid="U7879" data-muse-type="img_frame"><!-- image --><img class="block" id="u7879_img" src="images/new7git.png?crc=3772234055" alt="" width="17" height="17" data-muse-src="images/new7git.png?crc=3772234055"/></a>
-     <!-- /m_editable -->
-    </div>
-    <!-- m_editable region-id="editable-static-tag-U15518-BP_infinity" template="reel.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-    <div class="clearfix colelem" id="u15518-4" data-muse-uid="U15518" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-     <p>© 2009 ~ 2018 Nitcha Tothong – All rights reserved.</p>
-    </div>
-    <!-- /m_editable -->
     <div class="clearfix colelem" id="pu26633-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u26633-4" href="mailto:nitcha.fame@gmail.com"><!-- content --><p id="u26633-2"><span class="Character-Style" id="u26633">NITCHA (dot) FAME (at) GMAIL (dot) COM</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u26639-4" href="https://www.facebook.com/nitchafame"><!-- content --><p id="u26639-2"><span class="Character-Style" id="u26639">FB</span></p></a>
@@ -99,14 +67,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <a class="nonblock nontext anim_swing" id="u20707" href="reel.html#reel2013" data-href="anchor:U2766:U13168" data-muse-uid="U20707"><!-- simple frame --></a>
     <!-- /m_editable -->
    </div>
-  </div>
-  <div class="preload_images">
-   <img class="preload" src="images/new1mail-u7775-r-fr.png?crc=4051469361" alt=""/>
-   <img class="preload" src="images/new2fb-u7777-r-fr.png?crc=148424602" alt=""/>
-   <img class="preload" src="images/new3insta-u7779-r-fr.png?crc=203242076" alt=""/>
-   <img class="preload" src="images/new4vimeo-u7781-r-fr.png?crc=527731802" alt=""/>
-   <img class="preload" src="images/new5pin-u7783-r-fr.png?crc=4053791885" alt=""/>
-   <img class="preload" src="images/new6twitter-u7785-r-fr.png?crc=4116158665" alt=""/>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
