--- a/anyways.html
+++ b/anyways.html
@@ -16,19 +16,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Anyways</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=124381206"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=344979210"/>
-  <link rel="stylesheet" type="text/css" href="css/anyways.css?crc=129119922" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_anyways.css?crc=3691572"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3842126076"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=456776089"/>
+  <link rel="stylesheet" type="text/css" href="css/anyways.css?crc=4080062172" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript"></script>
+  <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/V05UiKDohNz0Kg5JvJ80B6_IAK0YM_beHJCyIvJFPOJfeTSgf5EUhbjPHQIXw2baF2S3Wh4Kwebhjh9hjQBKFebaZQmqjAByFQmR5AJujcb35AFReKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJHdAN0iYF8S14yifGHfFPqMyMMeMw6MPGHfF5qMyMMeMX6MPG4f5BxIMMjgfMgP6sFiWF8qMYbqvYSgb.js" type="text/javascript"></script>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   try {Typekit.load();} catch(e) {}
+</script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
  </head>
@@ -55,7 +56,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <div class="SlideShowContentPanel clearfix" id="u27355"><!-- stack box -->
         <!-- m_editable region-id="editable-static-tag-U28025-BP_infinity" template="anyways.html" data-type="image" data-ice-options="srcAttr=data-src" -->
         <div class="SSSlide clip_frame grpelem" id="u28025" data-muse-uid="U28025" data-muse-type="img_frame"><!-- image -->
-         <img class="block ImageInclude" id="u28025_img" data-src="images/ahtt_namecard-crop-u28025.jpg?crc=4148398915" src="images/blank.gif?crc=4208392903" alt="" data-width="570" data-height="320" data-muse-src="images/ahtt_namecard-crop-u28025.jpg?crc=4148398915"/>
+         <img class="block ImageInclude" id="u28025_img" data-src="images/ahtt_namecard-crop-u28025.jpg?crc=203857239" src="images/blank.gif?crc=4208392903" alt="" data-width="570" data-height="320" data-muse-src="images/ahtt_namecard-crop-u28025.jpg?crc=203857239"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28045-BP_infinity" template="anyways.html" data-type="image" data-ice-options="srcAttr=data-src" -->
@@ -93,26 +94,20 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="clearfix colelem" id="pu27493-13"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U27493-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u27493-13" data-muse-uid="U27493" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p id="u27493-2"><span class="BoldMenuLink" id="u27493">Anyways, Here's the Thing Identity</span></p>
-      <p id="u27493-4">Role : Art Director and Designer</p>
-      <p id="u27493-6">2016</p>
-      <p id="u27493-7">&nbsp;</p>
-      <p id="u27493-9">An identity design for Hybrid design/technology studio.</p>
-      <p id="u27493-10">&nbsp;</p>
-      <p id="u27493-11">&nbsp;</p>
-     </div>
-     <!-- /m_editable -->
-     <!-- m_editable region-id="editable-static-tag-U27398-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
-     <div class="clearfix grpelem" id="u27398-16" data-muse-uid="U27398" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p id="u27398-2">Credits</p>
-      <p id="u27398-5"><span id="u27398-3">Art direction and&nbsp; design:</span><span id="u27398-4"> Nitcha Tothong</span></p>
-      <p id="u27398-9"><span id="u27398-6">Programming:</span> <span class="actAsInlineDiv normal_text" id="u27403"><!-- content --><!-- m_editable region-id="editable-static-tag-U27404-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link" data-ice-editable="link" --><a class="nonblock nontext actAsDiv clearfix excludeFromNormalFlow" id="u27404-4" href="http://22-8miles.com" data-muse-uid="U27404" data-muse-type="txt_frame"><!-- content --><span class="actAsPara"><span class="Character-Style" id="u27404">Hang Do Thi Duc</span></span></a><!-- /m_editable --></span><span></span></p>
-      <p id="u27398-10">&nbsp;</p>
-      <p id="u27398-13"><span id="u27398-11">​</span><span class="actAsInlineDiv normal_text" id="u27407"><!-- content --><!-- m_editable region-id="editable-static-tag-U27408-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link" data-ice-editable="link" --><a class="nonblock nontext actAsDiv clearfix excludeFromNormalFlow" id="u27408-4" href="http://anywaysnyc.com/" data-muse-uid="U27408" data-muse-type="txt_frame"><!-- content --><span class="actAsPara"><span class="Character-Style" id="u27408">Official Website</span></span></a><!-- /m_editable --></span><span></span></p>
-      <p id="u27398-14">&nbsp;</p>
+    <div class="clearfix colelem" id="pu28983-24"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U28983-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u28983-24" data-muse-uid="U28983" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p class="Project" id="u28983-2"><span class="BoldMenuLink" id="u28983">Anyways, Here's the Thing Identity Design</span></p>
+      <p class="Project" id="u28983-5">2016 | <span id="u28983-4">Role : Art Director, Graphic Designer</span></p>
+      <p class="Project" id="u28983-7">Designed the corporate identity, website design and oversee all studio designs for positioning the design-technology studio.</p>
+      <p class="Project" id="u28983-8">&nbsp;</p>
+      <p class="Project" id="u28983-9">&nbsp;</p>
+      <p id="u28983-11">Credits</p>
+      <p id="u28983-13">Art direction and Visual design: Nitcha Tothong</p>
+      <p id="u28983-17">Development: <a class="nonblock" href="http://22-8miles.com">Hang Do Thi Duc</a></p>
+      <p id="u28983-18">&nbsp;</p>
+      <p id="u28983-21"><a class="nonblock" href="http://anywaysnyc.com/">Website</a></p>
+      <p id="u28983-22">&nbsp;</p>
      </div>
      <!-- /m_editable -->
      <div class="SlideShowWidget clearfix grpelem" id="slideshowu27375"><!-- none box -->
@@ -169,32 +164,32 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28153-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption invi clearfix grpelem" id="u28153-4" data-muse-uid="U28153" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 15</p>
+         <p>Website</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28173-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption invi clearfix grpelem" id="u28173-4" data-muse-uid="U28173" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 16</p>
+         <p>Website</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28193-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption invi clearfix grpelem" id="u28193-4" data-muse-uid="U28193" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 17</p>
+         <p>Website</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28213-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption invi clearfix grpelem" id="u28213-4" data-muse-uid="U28213" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 18</p>
+         <p>Website-Project Page</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28233-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption invi clearfix grpelem" id="u28233-4" data-muse-uid="U28233" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 19</p>
+         <p>Website-Event&nbsp; Page</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28253-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
         <div class="SSSlideCaption invi clearfix grpelem" id="u28253-4" data-muse-uid="U28253" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-         <p>Sketch 20</p>
+         <p>Website-footer</p>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U28273-BP_infinity" template="anyways.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
